--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Empresa A</title>
+	
+<link href="css/estilos.css" rel="stylesheet" type="text/css">	
 </head>
 
 <body>
