--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 	<h1> titulo principal </h1>
 	
 	<p>"Esto es un ejemplo del p&aacute;rrafo"</p>
+	
+		<p>"Esto es un ejemplo del segundo p&aacute;rrafo"</p>
+
 </body>
 </html>
